style(admin-panel): fixed missing border in /settings

--- a/apps/admin-panel/src/app.css
+++ b/apps/admin-panel/src/app.css
@@ -61,7 +61,7 @@
     @apply bg-gray-100 text-neutral-700 dark:bg-neutral-900 dark:text-neutral-300 [&:not(:disabled)]:hover:bg-gray-200 [&:not(:disabled)]:hover:text-black dark:[&:not(:disabled)]:hover:bg-neutral-800 dark:[&:not(:disabled)]:hover:text-white;
   }
   .settings-item {
-    @apply dark:bg-neutral-1000 flex w-full items-center justify-between gap-2 rounded-md border-neutral-200 bg-white p-4 dark:border-neutral-800;
+    @apply dark:bg-neutral-1000 flex w-full items-center justify-between gap-2 rounded-md border-[0.5px] border-neutral-400 bg-white p-4 dark:border-neutral-700;
   }
   .toast-container {
     @apply fixed bottom-2 right-2 z-20 flex h-fit max-h-[60dvh] flex-col gap-2 overflow-y-auto text-base font-medium text-black md:text-sm dark:text-white;
